my-eks-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  namespace: dummy
spec:
  type: LoadBalancer
  selector:
    app: dummy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
